public/css/base.css
/* ... */
label input[type=radio] {
  display: none;
}
label input[type=radio] + i::before {
  content: '\f10c';
  background: #fff;
  border-radius: 100%;
  font-size: 110%;
  color: rgba(0,0,150, 0.3);
}
label input[type=radio]:checked + i::before {
  content: '\f192';
}

.link input[type=checkbox],
label.button input[type=checkbox] {
  display: none;
}
label input[type=checkbox]:not(:checked) + i,
label input[type=checkbox]:checked + i + i {
  display: none;
}

.link {
  cursor: pointer;
  color: #f05;
}
.link:hover {
  text-decoration: underline;
}

.banner-overlay {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  height: 0;
}

.banner-overlay > div {
  position: relative;
  display: inline-block;
  float: right;
  background: rgba(255,255,255,0.8);
  padding: 10px;
  z-index: 999;
}
#login {
   border-radius: 0 0 0 10px;
   z-index: 1000;
}
#search {
  margin-right: 10px;
  border-radius: 0 0 10px 10px;
}
#search > form > * {
  display: inline-block;
  padding: 5px 15px;
  color: #337287;
  transition: background 0.5s ease;
  background: none;
  border: none;
  box-shadow: none;
  float: left;
  margin: 0;
}
#search > form > * {
  height: 33px;
  min-height: 33px;
  line-height: 33px;
  font-size: 1.25em;
}
#search button {
  border: none;
  line-height: 33px;
  margin-right: 10px;
  margin-left: 10px;
  padding: 0;
  color: #337287;
}
#search > :focus, #search > .focus {
  background: rgb(250,250,250);
}

#search input, #search .select {
  border-right: none;
}

#search:hover, #login:hover,
#login.drop-down-holder.hover {
  background: #fff;
}
#login ul, #login ul li, #login ul li a {
  color: #337287;
  text-shadow: none;
}
#login img {
   max-height: 30px;
   border-radius: 100%;
}
#login .username {
  text-decoration: none;
  line-height: 33px;
  float: left;
  margin-right: 20px;
  font-size: 1.25em;
  max-width: 300px;
  max-height: 33px;
  overflow: hidden;
}
#login .notices-bell {
  position: relative;
  line-height: 33px;
  text-decoration: none;
  font-size: 1.25em;
  margin-right: 20px;
  float: left;
}
#login .notices-bell span {
  position: absolute;
  top: -3px;
  left: 60%;
  display: block;
  background: #f00;
  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
  color: #fff;
  border-radius: 4px;
  font-size: 10px;
  padding: 3px;
  line-height: 1em;
  vertical-align: middle;
  animation: 1s bobben 0s 1;
  -webkit-animation: 1s bobben 0s 1;
}
#login .notices-bell span.invert {
  top: auto;
  bottom: -3px;
  margin-bottom: 0 !important;
  animation-delay: 0.1s;
  -webkit-animation-delay: 0.1s;
}
#login .notices-bell span.vert {
  left: auto;
  right: 60%;
  animation-delay: 0.15s;
  -webkit-animation-delay: 0.15s;
}
#login .notices-bell span.invert.vert {
  animation-delay: 0.2s;
  -webkit-animation-delay: 0.2s;
}

#login .drop-down::before {
  content: '';
  border: solid 10px #fff;
  border-bottom: none;
  display: block;
  width: 0;
  height: 0;
  border-radius: 15px;
  margin-top: -10px;
}
.logged-out #login {
  min-width: 120px;
}
.logged-out #login a {
  text-decoration: none;
  font-size: 1.25em;
  line-height: 34px;
}

.drop-down {
  margin-top: -1px;
  position: absolute;
  right: 0;
  top: 100%;
  min-width: 130px;
  display: none;
  text-align: left;
  height: initial;
}
.drop-down-holder:hover .drop-down,
.drop-down-holder.hover .drop-down {
  display: block;
}

.drop-down li {
  opacity: 1;
  background: #fff;
}
.drop-down li a {
  font-size: 13px;
}
.drop-down li:hover {
  color: #008;
}

.editable.editing {
  display: block;
  position: relative;
}
.editable.editing.inline {
  display: inline-block;
}
.editable .input,
.editable input.input, .editable textarea.input {
  display: none;
  background: none;
  border: none;
  outline: solid 2px #aaa;
  width: 100%;
  max-width: 100%;
  resize: none;
  font: inherit;
  color: inherit;
  line-height: 1.5em;
  text-shadow: inherit;
  padding: 0;
  margin: 0;
  box-shadow: none;
  border-radius: 0;
}
.editable.short.editing .input {
  width: auto;
}
.editable input.input {
  margin-top: -7px;
  margin-bottom: -1px;
}
.editable.editing .input {
  display: inline;
}
.editable.editing .content {
  display: none;
}
.editable .edit {
  cursor: pointer;
  padding: 3px 5px 3px 5px;
}
.editable.editing .edit {
  position: absolute;
  right: -20px;
  top: 0;
}

.comments {
  min-height: 340px;
  padding: 0;
}
.comments li.comment {
  list-style: none;
  padding-bottom: 10px;
}
.comments li.comment .content:not(.editing) textarea ~ * {
  display: none;
}


.comment {
  min-height: 100px;
}

.comment.deleted, .comment.deleted .content {
  min-height: 0;
}
.comment.deleted .content::before, .comment.deleted .content::after {
  display: none;
}
.comment.deleted .content {
  background: #fee;
  border-color: #a88;
}

.comment .bio {
  float: left;
  padding-right: 20px;
}

.comment .name {
  border-bottom: solid 1px rgba(0,0,150, 0.3);;
  margin-bottom: 10px;
}
.comment .name a {
  text-decoration: none;
  width: 100%;
}
.comment .name > a {
  color: #333333;
}

.comment .thumb .title {
  max-width: 185px;
}

blockquote {
  background: rgba(0,250,250, 0.3);
  padding: 3px;
  margin: 3px;
  border-radius: 5px;
  border: dotted 1px #eee;
}

.spoiler {
  padding: 1px;
  display: inline-block;
  background: #858585;
  color: #858585;
  text-shadow: none;
}
.spoiler * {
  opacity: 0;
}
.spoiler .img {
  background: #fff;
  position: relative;
  padding: 0;
  margin: 0;
  display: inline-block;
  opacity: 0.1;
}
.spoiler .img::after {
  font-family: 'FontAwesome';
  position: absolute;
  display: block;
  top: 45%;
  left: 0;
  content: '\f071';
  color: #000;
  text-align: center;
  width: 100%;
  line-height: 100%;
  font-size: 40px;
}

.spoiler:hover .img::after, .spoiler.revealed .img::after {
  display: none;
}
.spoiler:hover .img, .spoiler.revealed .img,
.spoiler:hover, .spoiler.revealed {
  text-shadow: inherit;
  color: inherit;
  background: none;
}
.spoiler:hover *, .spoiler.revealed * {
  opacity: 1;
}
/* ... */

